--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,10 @@
+{% if site.url %}
 <!-- UY BEGIN -->
 <div id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2134402"></script>
 <!-- UY END -->
+{% endif %}
+
 {% if site.duoshuo_shortname %}
 <!-- 多说评论框 start -->
 <div class="ds-thread" data-thread-key="{{ site.url }}{{ page.url }}" data-title="{{page.title}}" data-url="{{ site.url }}{{ page.url }}"></div>
