--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,7 +65,13 @@ layout: default
         {% include previousAndNext.html %}
 
         <h2 id="comments">评论</h2>
-        {% include comments.html %}
+        <script>
+        var idcomments_acct = '8129726529e145820d0aa98c3808b467';
+        var idcomments_post_id = '{{page.url}}';
+        var idcomments_post_url='{{site.url}}{{page.url}}';
+        </script>
+        <span id="IDCommentsPostTitle" style="display:none"></span>
+        <script type="text/javascript" src="https://www.intensedebate.com/js/genericLinkWrapperV2.js"></script>
 
 
     </div>
