--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,8 +1,11 @@
 {% if site.url %}
-<!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2134402"></script>
-<!-- UY END -->
+<script>
+var idcomments_acct = '8129726529e145820d0aa98c3808b467';
+var idcomments_post_id = '{{page.url}}';
+var idcomments_post_url='{{site.url}}{{page.url}}';
+</script>
+<span id="IDCommentsPostTitle" style="display:none"></span>
+<script type="text/javascript" src="https://www.intensedebate.com/js/genericLinkWrapperV2.js"></script>
 {% endif %}
 
 {% if site.duoshuo_shortname %}
